<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_text"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/ivFoto"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_person_foreground"
        android:background="@color/ic_person_background"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarMain"
        />

    <LinearLayout
        android:id="@+id/lLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivFoto"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/lbName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_"
            android:paddingHorizontal="20dp"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:textSize="@dimen/text_size"
            android:text="@string/name" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_"
            android:textSize="@dimen/text_size"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:background="@color/ic_person_background"/>

        <TextView
            android:id="@+id/lbLastName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_"
            android:paddingHorizontal="20dp"
            android:textSize="@dimen/text_size"
            android:text="@string/last_name" />

        <TextView
            android:id="@+id/tvlastName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_"
            android:textSize="@dimen/text_size"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:background="@color/ic_person_background"/>

        <TextView
            android:id="@+id/lbAge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_"
            android:paddingHorizontal="20dp"
            android:textSize="@dimen/text_size"
            android:text="@string/age" />

        <TextView
            android:id="@+id/tvAge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_"
            android:textSize="@dimen/text_size"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:background="@color/ic_person_background"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/lbRestMonthes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_"
            android:paddingHorizontal="20dp"
            android:textSize="@dimen/text_size"
            android:text="@string/monthes_to_birthday" />

        <TextView
            android:id="@+id/tvRestMonthes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_"
            android:textSize="@dimen/text_size"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:background="@color/ic_person_background"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/lbRestDays"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_"
            android:paddingHorizontal="20dp"
            android:textSize="@dimen/text_size"
            android:text="@string/days_to_birthday" />

        <TextView
            android:id="@+id/tvRestDays"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_"
            android:textSize="@dimen/text_size"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:background="@color/ic_person_background"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="@+id/lLayout"
        app:layout_constraintEnd_toEndOf="@+id/lLayout"
        app:layout_constraintTop_toBottomOf="@+id/lLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>